--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="left">Bhanu's Portfolio</div>
       <div class="right">
         <ul>
-          <li><a href="/">HOME</a></li>
+          <li><a href="#home">HOME</a></li>
           <li><a href="#education">Education</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
