--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       </div>
     </section>
     <div id="education"><br><br><br><br></div>
-    <section id="education" class="secondSection">
+    <section id="education" class="secondSection ">
       <div class="container px-4 py-5" id="hanging-icons">
         <h2 class="pb-2 border-bottom">Educational Experience</h2>
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-          <div class="col d-flex align-items-start">
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3 ">
+          <div class="col d-flex align-items-start  col-md-6 col-sm-12">
             <div
               class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
               <img src="college.svg" alt="" height="40" />
@@ -105,8 +105,8 @@
     <section id="skills" class="thirdSection">
       <div class="container px-4 py-5" id="hanging-icons">
         <h2 class="pb-2 border-bottom">SKILLS</h2>
-        <div class="d-flex gap-2 justify-content-center py-5">
-
+        <div class="d-flex flex-row row gap-2 justify-content-center py-5">
+          <div class="col col-sm-6 ">
           <span
             class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
             <img class="rounded-circle me-1" width="30" height="30" src="c.png" alt="" />C Language
@@ -135,6 +135,7 @@
             class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
             <img class="rounded-circle me-1" width="30" height="30" src="sql.png" alt="" />SQL
           </span>
+          </div>
         </div>
       </div>
       </div>
@@ -143,7 +144,9 @@
     <section id="projects" class="fourthSection">
       <div class="container px-4 py-5" id="hanging-icons">
         <h2 class="pb-2 border-bottom">PROJECTS</h2>
-        <div class="box">
+        <div class="row d-flex flex-row">
+          <div class="col col-sm-12 col-lg-12">
+            <div class="box">
           <div class="box1">
             <details>
               <summary class="summary">BLOOD BANK WEBSITE
@@ -168,9 +171,12 @@
           </div>
 
         </div>
+          </div>
+        </div>
+        
       </div>
 
-      </div>
+      
     </section>
   </main>
   <footer id = "contact">
