--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -37,12 +37,12 @@
         <br />
         I am
         <span id="element"></span>
-        <div class = "resume-github">
-          <a href = "Bhanu Resume.pdf"
-      Download = "Bhanu's Resume" target="_blank">
-         <button type = "button" class="btn btn-light" > RESUME </button>
-      </a>
-         <a href="https://github.com/PantalaBhanuPrasad" target="_blank"> <button type="button" class="btn btn-light">GITHUB</button></a> 
+        <div class="resume-github">
+          <a href="Bhanu Resume.pdf" Download="Bhanu's Resume" target="_blank">
+            <button type="button" class="btn btn-light"> RESUME </button>
+          </a>
+          <a href="https://github.com/PantalaBhanuPrasad" target="_blank"> <button type="button"
+              class="btn btn-light">GITHUB</button></a>
         </div>
       </div>
       <div class="rightSection">
@@ -107,34 +107,34 @@
         <h2 class="pb-2 border-bottom">SKILLS</h2>
         <div class="d-flex flex-row row gap-2 justify-content-center py-5">
           <div class="col col-sm-6 ">
-          <span
-            class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
-            <img class="rounded-circle me-1" width="30" height="30" src="c.png" alt="" />C Language
-          </span>
-          <span
-            class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
-            <img class="rounded-circle me-1" width="30" height="30" src="c++.png" alt="" />C++ Language
-          </span>
-          <span
-            class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
-            <img class="rounded-circle me-1" width="30" height="30" src="java.png" alt="" />Java Language
-          </span>
-          <span
-            class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
-            <img class="rounded-circle me-1" width="30" height="30" src="html.png" alt="" />HTML
-          </span>
-          <span
-            class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
-            <img class="rounded-circle me-1" width="30" height="30" src="css.png" alt="" />CSS
-          </span>
-          <span
-            class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
-            <img class="rounded-circle me-1" width="30" height="30" src="ja.png" alt="" />JavaScript
-          </span>
-          <span
-            class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
-            <img class="rounded-circle me-1" width="30" height="30" src="sql.png" alt="" />SQL
-          </span>
+            <span
+              class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
+              <img class="rounded-circle me-1" width="30" height="30" src="c.png" alt="" />C Language
+            </span>
+            <span
+              class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
+              <img class="rounded-circle me-1" width="30" height="30" src="c++.png" alt="" />C++ Language
+            </span>
+            <span
+              class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
+              <img class="rounded-circle me-1" width="30" height="30" src="java.png" alt="" />Java Language
+            </span>
+            <span
+              class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
+              <img class="rounded-circle me-1" width="30" height="30" src="html.png" alt="" />HTML
+            </span>
+            <span
+              class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
+              <img class="rounded-circle me-1" width="30" height="30" src="css.png" alt="" />CSS
+            </span>
+            <span
+              class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
+              <img class="rounded-circle me-1" width="30" height="30" src="ja.png" alt="" />JavaScript
+            </span>
+            <span
+              class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
+              <img class="rounded-circle me-1" width="30" height="30" src="sql.png" alt="" />SQL
+            </span>
           </div>
         </div>
       </div>
@@ -144,42 +144,73 @@
     <section id="projects" class="fourthSection">
       <div class="container px-4 py-5" id="hanging-icons">
         <h2 class="pb-2 border-bottom">PROJECTS</h2>
-        <div class="row d-flex flex-row">
+        <!-- <div class="row d-flex flex-row">
           <div class="col col-sm-12 col-lg-12">
             <div class="box">
-          <div class="box1">
-            <details>
-              <summary class="summary">BLOOD BANK WEBSITE
-              </summary>
-              <p>A web-based blood bank management system featuring a user-friendly
-                homepage, donor registration form, donor-list display, and blood
-                group-based search functionality</p>
-              <a href="https://pantalabhanuprasad.github.io/bloodbank/" target="_blank"><button type="button"
-                  class="btn btn-dark" ">Click Here</button></a>
+              <div class="box1">
+                <details>
+                  <summary class="summary">BLOOD BANK WEBSITE
+                  </summary>
+                  <p>A web-based blood bank management system featuring a user-friendly
+                    homepage, donor registration form, donor-list display, and blood
+                    group-based search functionality</p>
+                  <a href="https://pantalabhanuprasad.github.io/bloodbank/" target="_blank"><button type="button"
+                      class="btn btn-dark" ">Click Here</button></a>
             </details>
 
           </div>
           <div class=" box2">
-                  <details>
-                    <summary class="summary">SMART DUSTBIN
-                    </summary>
-                    <p>This project works on ultrasonic sensor where the lid of the trash bin
-                      will open when a person come near to it and automatically closes after
-                      5 seconds.
-                    </p>
-                  </details>
+                      <details>
+                        <summary class="summary">SMART DUSTBIN
+                        </summary>
+                        <p>This project works on ultrasonic sensor where the lid of the trash bin
+                          will open when a person come near to it and automatically closes after
+                          5 seconds.
+                        </p>
+                      </details>
+              </div>
+
+            </div>
+          </div>
+        </div> -->
+        <div class="projects-container d-flex justify-content-evenly align-items-center ">
+          <p>
+            <a class="btn project-btn btn-light my-5 mb-5" data-bs-toggle="collapse" href="#blood" role="button"
+              aria-expanded="false" aria-controls="collapseExample">
+              BLOOD BANK WEBSITE
+            </a>
+          </p>
+          <div class="collapse" id="blood" style="margin-right:20px; ">
+            <div class="card card-body text-bg-dark">
+              <p>A web-based blood bank management system featuring a user-friendly
+                homepage, donor registration form, donor-list display, and blood
+                group-based search functionality</p>
+              <a href="https://pantalabhanuprasad.github.io/bloodbank/" target="_blank"><button type="button"
+                  class="btn btn-light" ">Click Here</button></a>
+            </div>
           </div>
 
-        </div>
-          </div>
-        </div>
-        
-      </div>
+          <p>
+            <a class=" btn project-btn btn-light" data-bs-toggle="collapse" href="#smart" role="button"
+                  aria-expanded="false" aria-controls="collapseExample"
+                  style="margin-right:20px; padding:20px; border-radius: 10px;">
+                  SMART DUSTBIN
+              </a>
+              </p>
+              <div class="collapse" id="smart" style="margin-right:20px;">
+                <div class="card card-body text-bg-dark">
+                  A web-based blood bank management system featuring a user-friendly
+                  homepage, donor registration form, donor-list display, and blood
+                  group-based search functionality
+                </div>
+              </div>
 
-      
+            </div>
+
+
     </section>
   </main>
-  <footer id = "contact">
+  <footer id="contact">
     <div class="footer-head">
       <h4 class="heading" style="font-weight: bold;">Bhanu's Portfolio</h4>
       <ul class="footer-list">
@@ -189,7 +220,9 @@
         <a href="https://github.com/PantalaBhanuPrasad" target="_blank">
           <li><img class='img' src="github.png" alt="" height="20px" width="20px"></li>
         </a>
-        <a href="mailto:pantalabhanuprasad@gmail.com"><li><img class='img' src="mail.png" alt="" height="20px" width="20px"></li></a>
+        <a href="mailto:pantalabhanuprasad@gmail.com">
+          <li><img class='img' src="mail.png" alt="" height="20px" width="20px"></li>
+        </a>
         <a href="https://www.instagram.com/bhanu._.prasad_/" target="
         ">
           <li><img class='img' src="insta.jpeg" alt="" height="20px" width="20px"></li>
@@ -197,10 +230,10 @@
       </ul>
     </div>
     <div class="footer-bottom">
-      <p>CopyRight &copy; 2023 designed by <span class = "name1">BHANU</span></p>
+      <p>CopyRight &copy; 2023 designed by <span class="name1">BHANU</span></p>
     </div>
-  </footerid>
-  </div>
+    </footerid>
+    </div>
   </footer>
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
